src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedLauncherType_1/InvalidUnexpectedLauncherType_1.php
<?php

namespace Invalid\UnexpectedLauncherType_1;

use Claroline\PluginBundle\AbstractType\ClarolineApplication;

class InvalidUnexpectedLauncherType_1 extends ClarolineApplication
{
    public function getLaunchers()
    {
        return array('not_a_launcher_instance');
    }
}